--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,7 +98,7 @@ select {
   box-shadow: 0px 10px 20px 0px rgba(76, 78, 97, 0.5);
 }
 .role img {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   margin-left: auto;
 }
 
@@ -148,6 +148,7 @@ select {
 
 body {
   border: 1px solid red;
+  min-height: 100vh;
   font-family: var(--ff-primary);
   font-size: var(--fz);
   display: flex;
@@ -159,7 +160,7 @@ body {
 
 .header {
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 1rem;
 }
 
 .title,
