Link 'Coded by' to github and styles.scss

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,15 +3,15 @@
 @use './components/cards';
 
 body {
-    border: 1px solid red;
-    min-height: 100vh;
     font-family: var(--ff-primary);
     font-size: var(--fz);
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 1rem;
+    overflow: hidden;
 }
 
 .header {
@@ -52,8 +52,4 @@ body {
 
 // STYLES ABOVE THIS LINE
 
-
 // FINISHED MARKUP ABOVE
-
-
-
