--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,26 +30,23 @@ body {
 }
 
 .quote {
-    font-size: 1.1rem;
+    font-size: .9rem;
     max-width: 35rem;
     color: var(--clr-neutral-300);
-    font-weight: var(--fw-200);
+    font-weight: 100;
     margin-top: 1rem;
 }
 
 .role {
 
     &__title {
+        font-size: 1.2rem;
         color: var(--clr-neutral-600);
     }
 
     &__description {
         color: var(--clr-neutral-300);
-        font-size: 1rem;
+        font-size: .9rem;
         font-weight: var(--fw-400);
     }
 }
-
-// STYLES ABOVE THIS LINE
-
-// FINISHED MARKUP ABOVE
